--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
   "name": "ABTesting",
   "version": "1.0.0",
-  "description": "Todo.",
+  "description": "AB Test demo to open a modal with one of the two layout variations on button click.",
   "main": "Gruntfile.js",
   "dependencies": {
-    "grunt-contrib-concat": "^0.5.0",
     "grunt": "^0.4.5",
-    "grunt-contrib-htmlmin": "^0.3.0",
+    "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-cssmin": "^0.10.0",
+    "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-less": "^0.11.4",
     "grunt-contrib-uglify": "^0.5.1",
-    "grunt-contrib-less": "^0.11.4"
+    "grunt-contrib-watch": "^0.6.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
+    "babelify": "^7.3.0",
+    "grunt-browserify": "^5.0.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-qunit": "^1.3.0",
-    "grunt-http-server": "^2.0.0"
+    "grunt-http-server": "^2.0.0",
+    "uglify-js": "git+https://github.com/mishoo/UglifyJS2.git#harmony"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
